# Lootie

./: .gitignore  Cargo.toml  README.md  RELEASE.md  justfile
.github/workflows/: release.yml
reds/: LootIconsExtensionFix.reds  Lootie.reds
src/: bindings.rs  hook.rs  lib.rs
