[package]
name = "loot_icons_extension_fix"
authors = ["Roms1383", "Demon9ne"]
version = "0.2.0"
edition = "2021"
rust-version = "1.82.0"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

[dependencies]
red4ext-rs = { git = "https://github.com/jac3km4/red4ext-rs", rev = "v0.9.1" }
